--- a/studio_curtains/sass/components/_card.scss
+++ b/studio_curtains/sass/components/_card.scss
@@ -163,6 +163,7 @@
       &--back {
         transform: rotateX(0deg);
         clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
       }
     }
 
